welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:4: error: missing arguments for method faireMotif in class PatternPicture;
follow this method with `_' if you want to treat it as a partially applied function
    	faireMotif
        ^